Fix chart on mobile

--- a/src/resources/css/statistics_style.css
+++ b/src/resources/css/statistics_style.css
@@ -17,9 +17,10 @@ body {
 }
 
 .statistics {
+	margin: 0;
 	font-size: 25px;
 	text-align: center;
-	padding: 8px;
+	padding: 8px 0;
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
 	border-color: #9c9c9c;
@@ -29,9 +30,13 @@ body {
 	border-style: none;
 }
 
+#chart-wrapper {
+	width: 568px;
+	height: 285px;
+}
+
 #monthly-chart {
-	width: 552px;
-	height: 283px;
+	padding: 0;
 }
 
 @media only screen and (max-width: 360px) {
